--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p> Mi nombre es Evelyn Farfan, tengo 23 años, 
-						en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
-						<button type="button" class="btn btn-info">Descarga mi CV</button>
+						<p> Mi nombre es Evelyn Farfan, soy estudiante "Laboratoria", además de egresada del Instituto Peruano de Arte y Diseño (IPAD) en la especialidad de Diseño Gráfico.
+						<br>
+						<br>
+						Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
+						<br>
+						<button id="botones" type="button" class="btn btn-info">Descarga mi CV</button>
 						<div class="row">
 							<div class="col-md-4"></div>
 							<div class="col-md-4"></div>
@@ -93,7 +96,7 @@
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent">70%</div>
-					</div> <!-- End Skill Bar -->
+						</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
@@ -150,30 +153,30 @@
 			</div>
 			<div class="row">
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-uno"><img class="imgProjecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
+					<a data-toggle="modal" href="#modal-uno"><img class="imgProyecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
 					<div class="colorHover">
 			
 					</div>
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-dos"><img class="imgProjecto center-block img-responsive" src="img/portafolio2.jpg" alt="portafolio-dos"></a>
+					<a data-toggle="modal" href="#modal-dos"><img class="imgProyecto center-block img-responsive" src="img/portafolio2.jpg" alt="portafolio-dos"></a>
 					<div class="colorHover">
 			
 					</div>
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-tres"><img class="imgProjecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"></a>
+					<a data-toggle="modal" href="#modal-tres"><img class="imgProyecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"></a>
 				</div>
 			</div>
 			<div class="row">
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-cuatro"><img class="imgProjecto center-block img-responsive" src="img/portafolio4.jpg" alt="portafolio-cuatro"></a>
+					<a data-toggle="modal" href="#modal-cuatro"><img class="imgProyecto center-block img-responsive" src="img/portafolio4.jpg" alt="portafolio-cuatro"></a>
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-cinco"><img class="imgProjecto center-block img-responsive" src="img/portafolio5.jpg" alt="portafolio-cinco"></a>
+					<a data-toggle="modal" href="#modal-cinco"><img class="imgProyecto center-block img-responsive" src="img/portafolio5.jpg" alt="portafolio-cinco"></a>
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-seis"><img class="imgProjecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-seis"></a>
+					<a data-toggle="modal" href="#modal-seis"><img class="imgProyecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-seis"></a>
 				</div>
 			</div>
 		</div>
@@ -196,26 +199,24 @@
 	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	        <p class="tituloProyecto">MI PORTAFOLIO</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio1-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">El Proyecto "Mi Portafolio" consistio en desarrollar un página web teniendo como base una plantilla, este proyecto </div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -228,26 +229,24 @@
 	<div class="modal fade" id="modal-dos" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	        <p class="tituloProyecto">GRAXPO</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio2-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/graxpo">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -260,26 +259,24 @@
 	<div class="modal fade" id="modal-tres" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	        <p class="tituloProyecto">TAKE</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio3-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/take">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/take/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -292,26 +289,24 @@
 	<div class="modal fade" id="modal-cuatro" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	        <p class="tituloProyecto">TRELLO</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio4-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">Replica del Trello</div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/trello">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/trello/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -324,26 +319,24 @@
 	<div class="modal fade" id="modal-cinco" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	        <p class="tituloProyecto">LYFT</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/portafolio5-2.png" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio5-2.png" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/lyft">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/lyft/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -356,26 +349,24 @@
 	<div class="modal fade" id="modal-seis" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
-
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
 	       	<p class="tituloProyecto">NEW PROJECT</p>
 	      </div>
-
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div class="img-proyecto"><img class="center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
 	      				<div class="linkPojects">
-	      					<button type="button" class="btn btn-info">GitHub</button>
-	      					<button type="button" class="btn btn-info">Ver Página</button>
+	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
