corrigiendo version mobile

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">El Proyecto "Mi Portafolio" consistio en desarrollar un página web teniendo como base una plantilla, este proyecto </div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
 	      				</div>
@@ -244,7 +244,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/graxpo">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/">Ver Página</a>
 	      				</div>
@@ -274,7 +274,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/take">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/take/">Ver Página</a>
 	      				</div>
@@ -304,7 +304,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Replica del Trello</div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/trello">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/trello/">Ver Página</a>
 	      				</div>
@@ -334,7 +334,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/lyft">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/lyft/">Ver Página</a>
 	      				</div>
@@ -364,7 +364,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
-	      				<div class="linkPojects">
+	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
 	      				</div>
