--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="contTituloColor">
 						<p class="sub text-center">SOBRE MÍ</p>
 					</div>
-					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
+					<div class="mb10 col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
