--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-				      <a id="logo-nav" class="navbar-brand" href="#header"><img id="logoH" src="img/logoh2.png" alt="img-logo"></a>
+				      <a id="logo-nav" class="navbar-brand" href="#header"><img id="logoH" src="img/logoh2-2.png" alt="img-logo"></a>
 				    </div>
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				      <ul class="nav navbar-nav navbar-right">
