--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/ionicons.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="fuente/sample.css">
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,12 +69,12 @@
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p> Mi nombre es Evelyn Farfan, soy estudiante "Laboratoria", además de egresada del Instituto Peruano de Arte y Diseño (IPAD) en la especialidad de Diseño Gráfico.
+						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de egresada de 
 						<br>
 						<br>
 						Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
 						<br>
-						<button id="botones" type="button" class="btn btn-info">Descarga mi CV</button>
+						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
 						<div class="row">
 							<div class="col-md-4"></div>
 							<div class="col-md-4"></div>
@@ -89,8 +90,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="contTituloWhite">
-						<p class="sub2 text-center">HABILIDADES</p>
-					</div>
+					<p class="sub2 text-center">HABILIDADES</p>
+				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
@@ -176,21 +177,47 @@
 					<a data-toggle="modal" href="#modal-cinco"><img class="imgProyecto center-block img-responsive" src="img/portafolio5.jpg" alt="portafolio-cinco"></a>
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-seis"><img class="imgProyecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-seis"></a>
+					<a data-toggle="modal" href="#modal-seis"><img class="imgProyecto center-block img-responsive" src="img/portafolio6.jpg" alt="portafolio-seis"></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="seccion4" class="contacto">
+		<div class="container">
+			<div class="row">
+				<div class="contTituloWhite">
+					<p class="sub2 text-center">CONTACTO</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="text-center col-xs-12 col-sm-4 col-md-4">
+					<i class="white glyphicon glyphicon-envelope"><span class="email">e.farfanvaldivia@gmail.com</span></i>
+				</div>
+				<div class="text-center col-xs-12 col-sm-4 col-md-4">
+					<div class="row">
+						<div class="col-xs-4">
+							<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
+						</div>
+						<div class="col-xs-4">
+							<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
+						</div>
+						<div class="col-xs-4">
+							<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="text-center col-xs-12 col-sm-4 col-md-4">
+					<button id="botones2" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<footer id="seccion4" class="footer">
+	<footer  class="footer">
 		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6"></div>
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-right">
-					<a href="#"><i class="iconRedes ion-social-github"></i></a>
-					<a href="#"><i class="iconRedes ion-social-linkedin"></i></a>
-					<p>e.farfanvaldivia@gmail.com</p>
-				</div>
+			<div class="text-center row">
+				<p>Copyright © Evelyn Farfan 2016</p>
 			</div>
 		</div>
 	</footer>
@@ -213,7 +240,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">El Proyecto "Mi Portafolio" consistio en desarrollar un página web teniendo como base una plantilla, este proyecto </div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
@@ -243,7 +277,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/graxpo">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/">Ver Página</a>
@@ -273,7 +314,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/take">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/take/">Ver Página</a>
@@ -303,7 +351,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Replica del Trello</div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/trello">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/trello/">Ver Página</a>
@@ -333,7 +388,14 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/lyft">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/lyft/">Ver Página</a>
@@ -358,12 +420,19 @@
 	      	<div id="contProject" class="container">
 	      		<div class="row">
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-	      				<div><img class="img-proyecto center-block img-responsive" src="img/mailboxing1.jpg" alt="img-proyecto"></div>
+	      				<div><img class="img-proyecto center-block img-responsive" src="img/portafolio6-1.jpg" alt="img-proyecto"></div>
 	      			</div>
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vel quae! Iure architecto ad quasi animi, quas delectus officia possimus veritatis amet a est quos natus vero sapiente, aliquid ab.</div>
+	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
+	      				<hr>
+	      				<div class="herramientas">
+	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
+	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
+									<span class="iconHerramienta bootstrap">B</span>
+	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
 	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
