--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<img src="img/img-perfil.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de egresada de 
+						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de Diseñadora Gráfica.
 						<br>
 						<br>
 						Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
