--- a/index.html
+++ b/index.html
@@ -96,49 +96,49 @@
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">70%</div>
+						<div class="skill-bar-percent"><!-- 70% --></div>
 						</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">70%</div>
+						<div class="skill-bar-percent"><!-- 70% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="50%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>JavaScript</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">50%</div>
+						<div class="skill-bar-percent"><!-- 50% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="40%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>JQuery</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">40%</div>
+						<div class="skill-bar-percent"><!-- 40% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="60%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Bootstrap</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">60%</div>
+						<div class="skill-bar-percent"><!-- 60% --></div>
 					</div> <!-- End Skill Bar -->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="50%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>GitHub</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">50%</div>
+						<div class="skill-bar-percent"><!-- 50% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Photoshop</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">70%</div>
+						<div class="skill-bar-percent"><!-- 70% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Illustrator</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">70%</div>
+						<div class="skill-bar-percent"><!-- 70% --></div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="80%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>InDesign</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent">80%</div>
+						<div class="skill-bar-percent"><!-- 80% --></div>
 					</div> <!-- End Skill Bar -->
 				</div>
 			</div>
@@ -222,7 +222,6 @@
 		</div>
 	</footer>
 
-
 	<div class="modal fade" id="modal-uno" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div id="contModal" class="modal-dialog" role="document">
 	    <div class="modal-content">
@@ -277,7 +276,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Proyecto personal </div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
