--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 				</div>
 				<div class="scroll row">
 					<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 text-center">
-						<div class="scrolldown">
-							<i class="glyphicon glyphicon-menu-down iconMouse"></i>
-							<p class="white">SCROLL DOWN</p>
-						</div>
+						<a href="#seccion1">
+							<div class="scrolldown">
+								<i class="glyphicon glyphicon-menu-down iconMouse"></i>
+								<p class="white">SCROLL DOWN</p>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -72,7 +74,8 @@
 						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de Diseñadora Gráfica.
 						<br>
 						<br>
-						Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional.</p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis odio sed nunc sollicitudin varius. Aenean hendrerit suscipit tellus id gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed lobortis ultrices ligula at imperdiet. Fusce ac scelerisque leo.
+						<!-- Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional. --></p>
 						<br>
 						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
 						<div class="row">
@@ -93,7 +96,7 @@
 					<p class="sub2 text-center">HABILIDADES</p>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent"><!-- 70% --></div>
@@ -121,7 +124,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="50%">
-						<div class="skillbar-title" style="background: #4ca3a5;"><span>GitHub</span></div>
+						<div class="skillbar-title" style="background: #4ca3a5;"><span>GIT</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent"><!-- 50% --></div>
 					</div> <!-- End Skill Bar -->
@@ -135,7 +138,7 @@
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent"><!-- 70% --></div>
 					</div> <!-- End Skill Bar -->
-					<div class="skillbar clearfix " data-percent="80%">
+					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>InDesign</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
 						<div class="skill-bar-percent"><!-- 80% --></div>
@@ -183,7 +186,7 @@
 		</div>
 	</section>
 	
-	<section id="seccion4" class="contacto">
+	<!-- <section id="seccion4" class="contacto">
 		<div class="container">
 			<div class="row">
 				<div class="contTituloWhite">
@@ -191,32 +194,35 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="text-center col-xs-12 col-sm-4 col-md-4">
+				<div class=" text-center col-xs-12 col-sm-4 col-md-4">
 					<i class="white glyphicon glyphicon-envelope"><span class="email">e.farfanvaldivia@gmail.com</span></i>
-				</div>
-				<div class="text-center col-xs-12 col-sm-4 col-md-4">
-					<div class="row">
-						<div class="col-xs-4">
-							<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
-						</div>
-						<div class="col-xs-4">
-							<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
-						</div>
-						<div class="col-xs-4">
-							<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
-						</div>
-					</div>
 				</div>
 				<div class="text-center col-xs-12 col-sm-4 col-md-4">
 					<button id="botones2" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
 				</div>
+				<div class="text-center col-xs-12 col-sm-4 col-md-4">
+					<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
+					<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
+					<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
+				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<footer  class="footer">
 		<div class="container">
+			<!-- <div class="row">
+				<div class="contTituloGray">
+					<p class="sub3 text-center">CONTACTO</p>
+				</div>
+			</div> -->
 			<div class="text-center row">
+				<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
+				<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
+				<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
+			</div>
+			<div class="text-center row">
+				<p>e.farfanvaldivia@gmail.com</p>
 				<p>Copyright © Evelyn Farfan 2016</p>
 			</div>
 		</div>
@@ -276,7 +282,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto personal </div>
+	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -313,7 +319,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -350,13 +356,13 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Este proyecto consistió en realizar una réplica del Trello, utilizando javascript, navegación por el DOM.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
 	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
 	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
-									<span class="iconHerramienta bootstrap">B</span>
+									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/trello">GitHub</a>
@@ -387,13 +393,13 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, sint consectetur facere explicabo nemo et corrupti voluptas quos, fuga ab pariatur sed aspernatur soluta voluptatem aliquid iusto, nostrum cumque illum.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
 	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
 	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
-									<span class="iconHerramienta bootstrap">B</span>
+									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
 	      					<a id="botones" href="https://github.com/efarfan2393/lyft">GitHub</a>
@@ -424,17 +430,17 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est odio tenetur, aliquam velit, animi voluptates atque fuga quae rerum accusamus, ullam nisi maiores aliquid maxime. Omnis repudiandae adipisci distinctio, nam.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
 	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
 	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
-									<span class="iconHerramienta bootstrap">B</span>
+									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/twitter">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/twitter/">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
