--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<p class="sub text-center">SOBRE MÍ</p>
 					</div>
 					<div class="mb10 col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
-						<img src="img/img-perfil.jpg" alt="photp-perfil">
+						<img class="img-responsive center-block" src="img/photo-cv.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de Diseñadora Gráfica.
@@ -99,50 +99,50 @@
 					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>HTML5</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 70% --></div>
+						<div class="skill-bar-percent">70%</div>
 						</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="75%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>CSS3</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 70% --></div>
+						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="50%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>JavaScript</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 50% --></div>
+						<div class="skill-bar-percent">50%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="40%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>JQuery</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 40% --></div>
+						<div class="skill-bar-percent">40%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="60%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Bootstrap</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 60% --></div>
+						<div class="skill-bar-percent">60%</div>
 					</div> <!-- End Skill Bar -->
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="skillbar clearfix " data-percent="50%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>GIT</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 50% --></div>
+						<div class="skill-bar-percent">50%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Photoshop</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 70% --></div>
+						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>Illustrator</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 70% --></div>
+						<div class="skill-bar-percent">70%</div>
 					</div> <!-- End Skill Bar -->
 					<div class="skillbar clearfix " data-percent="70%">
 						<div class="skillbar-title" style="background: #4ca3a5;"><span>InDesign</span></div>
 						<div class="skillbar-bar" style="background: #4ca3a5;"></div>
-						<div class="skill-bar-percent"><!-- 80% --></div>
-					</div> <!-- End Skill Bar -->
+						<div class="skill-bar-percent">80%</div>
+					</div>
 				</div>
 			</div>
 		</div>
