--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 						<img class="img-responsive center-block" src="img/photo-cv.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p> Mi nombre es Evelyn Farfan, soy Front End Developer graduada de Laboratoria, además de Diseñadora Gráfica.
+						<p> Mi nombre es Evelyn Farfan, soy Front-end Developer, estudiante de Laboratoria, además de Diseñadora Gráfica.
 						<br>
+						
+						</p>
 						<br>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse venenatis odio sed nunc sollicitudin varius. Aenean hendrerit suscipit tellus id gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed lobortis ultrices ligula at imperdiet. Fusce ac scelerisque leo.
-						<!-- Me gustaria poder laborar en un puesto que me permita plasmar los conocimientos adquiridos en mis años de estudio, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizandome en mi campo profesional. --></p>
-						<br>
-						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
+						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="../pdf/cv-evelyn-farfan.pdf" download="CV-Evelyn Farfan">
+						Descarga mi cv</a></button>
 						<div class="row">
 							<div class="col-md-4"></div>
 							<div class="col-md-4"></div>
@@ -157,6 +157,10 @@
 			</div>
 			<div class="row">
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<a data-toggle="modal" href="#modal-tres"><img class="imgProyecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"><div class="colorHover"></div></a>
+					
+				</div>
+				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<a data-toggle="modal" href="#modal-uno"><img class="imgProyecto center-block img-responsive" src="img/portafolio1.jpg" alt="portafolio-uno"></a>
 					<div class="colorHover">
 			
@@ -164,12 +168,6 @@
 				</div>
 				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<a data-toggle="modal" href="#modal-dos"><img class="imgProyecto center-block img-responsive" src="img/portafolio2.jpg" alt="portafolio-dos"></a>
-					<div class="colorHover">
-			
-					</div>
-				</div>
-				<div id="c-p" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-					<a data-toggle="modal" href="#modal-tres"><img class="imgProyecto center-block img-responsive" src="img/portafolio3.jpg" alt="portafolio-tres"></a>
 				</div>
 			</div>
 			<div class="row">
@@ -185,37 +183,9 @@
 			</div>
 		</div>
 	</section>
-	
-	<!-- <section id="seccion4" class="contacto">
-		<div class="container">
-			<div class="row">
-				<div class="contTituloWhite">
-					<p class="sub2 text-center">CONTACTO</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class=" text-center col-xs-12 col-sm-4 col-md-4">
-					<i class="white glyphicon glyphicon-envelope"><span class="email">e.farfanvaldivia@gmail.com</span></i>
-				</div>
-				<div class="text-center col-xs-12 col-sm-4 col-md-4">
-					<button id="botones2" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i>Descarga mi CV</button>
-				</div>
-				<div class="text-center col-xs-12 col-sm-4 col-md-4">
-					<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
-					<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
-					<a class="iconRedes" href="https://www.behance.net/evelyn_farfan"><i class="iconRedes fa fa-behance-square"></i></a>
-				</div>
-			</div>
-		</div>
-	</section> -->
 
 	<footer  class="footer">
 		<div class="container">
-			<!-- <div class="row">
-				<div class="contTituloGray">
-					<p class="sub3 text-center">CONTACTO</p>
-				</div>
-			</div> -->
 			<div class="text-center row">
 				<a class="iconRedes" href="#"><i class="iconRedes fa fa-linkedin-square"></i></a>
 				<a class="iconRedes" href="https://github.com/efarfan2393"><i class="iconRedes fa fa-github"></i></a>
@@ -245,7 +215,8 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Desarrollo de Landing page responsive, en donde comencé a utilizar el framework bootstrap.</div>
+	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistia en la maquetación de un LandingPage.
+	      				Este fue uno de los primeros proyectos en donde implementamos y empezamos a utilizar el framework Bootstrap.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -254,8 +225,8 @@
 									<span class="iconHerramienta bootstrap">B</span>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/portafolio">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/portafolio" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/portafolio/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -282,7 +253,8 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.</div>
+	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.
+	      				En este proyecto hize uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) en Laboratoria</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -291,8 +263,8 @@
 									<span class="iconHerramienta bootstrap">B</span>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/graxpo">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/graxpo" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/graxpo/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -308,7 +280,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <p class="tituloProyecto">TAKE</p>
+	        <p class="tituloProyecto">ECOMUNIDAD SOSTENIBLE</p>
 	      </div>
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
@@ -319,17 +291,16 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.</div>
+	      				<div class="explicacion">Unos de los primeros proyectos desarrollados en Laboratoria, el cual consistia en la maquetación de una página web, utilizando HTML5 y CSS3.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
 	      					<i class="iconHerramienta html ion-social-html5-outline"></i>
 	      					<i class="iconHerramienta css ion-social-css3-outline"></i>
-									<span class="iconHerramienta bootstrap">B</span>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/take">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/take/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/ecomunidad-sostenible" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/ecomunidad-sostenible/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -356,7 +327,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Este proyecto consistió en realizar una réplica del Trello, utilizando javascript, navegación por el DOM.</div>
+	      				<div class="explicacion">Este proyecto consistió en realizar una réplica del Trello, utilizando javascript, navegación por el DOM, creación de elementos y drag and drop</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -365,8 +336,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/trello">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/trello/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/trello" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/trello/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -393,7 +364,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, sint consectetur facere explicabo nemo et corrupti voluptas quos, fuga ab pariatur sed aspernatur soluta voluptatem aliquid iusto, nostrum cumque illum.</div>
+	      				<div class="explicacion">Proyecto de creación de una app movil para solicitar taxis, en este trabajo hicimos uso de la librearia de JQuery.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -402,8 +373,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/lyft">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/lyft/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/lyft" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/lyft/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
@@ -430,7 +401,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est odio tenetur, aliquam velit, animi voluptates atque fuga quae rerum accusamus, ullam nisi maiores aliquid maxime. Omnis repudiandae adipisci distinctio, nam.</div>
+	      				<div class="explicacion">Este Proyecto consitió en realiazar un replica de twitter en el cual se simulaba los post de twitter.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -439,8 +410,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/twitter">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/twitter/">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/twitter" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/twitter/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
