--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 						<img class="img-responsive center-block" src="img/photo-cv.jpg" alt="photp-perfil">
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-						<p> Mi nombre es Evelyn Farfan, soy Front-end Developer, estudiante de Laboratoria, además de Diseñadora Gráfica.
+						<p class="quince"> Mi nombre es Evelyn Farfan, soy Front-end Developer Jr, estudiante de Laboratoria, además de Diseñadora Gráfica.
 						<br>
-						
+						<br>
+						Me considero una persona responsable, con ganas de seguir aprendiendo, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional. Si te gustaría trabajar conmigo puedes contactarme mediante mis redes sociales.
 						</p>
 						<br>
 						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="../pdf/cv-evelyn-farfan.pdf" download="CV-Evelyn Farfan">
@@ -254,7 +255,7 @@
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
 	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.
-	      				En este proyecto hize uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) en Laboratoria</div>
+	      				En este proyecto hize uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) de Laboratoria</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
