--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistia en la maquetación de un LandingPage.
-	      				Este fue uno de los primeros proyectos en donde implementamos y empezamos a utilizar el framework Bootstrap.</div>
+	      				<div class="explicacion">Proyecto desarrollado en Laboratoria, el cual consistía en la maquetación de un LandingPage.<br>Este fue uno de los primeros proyectos en donde implementamos y empezamos a utilizar el framework Bootstrap.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -254,8 +253,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto personal que desarrolle basandome en un templates existente.
-	      				En este proyecto hize uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) de Laboratoria</div>
+	      				<div class="explicacion">Proyecto personal que desarrolle basándome en un templates existente. En este proyecto hice uso de todos los conocimientos adquiridos durante la primera unidad (HTML5, CSS3, Bootstrap) de Laboratoria</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -292,7 +290,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Unos de los primeros proyectos desarrollados en Laboratoria, el cual consistia en la maquetación de una página web, utilizando HTML5 y CSS3.</div>
+	      				<div class="explicacion">Unos de los primeros proyectos desarrollados en Laboratoria, el cual consistía en la maquetación de una página web, utilizando HTML5 y CSS3.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -328,7 +326,7 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Este proyecto consistió en realizar una réplica del Trello, utilizando javascript, navegación por el DOM, creación de elementos y drag and drop</div>
+	      				<div class="explicacion">Este proyecto consistió en realizar una réplica del Trello, utilizando javascript, navegación por el DOM, creación de elementos y drag and drop.</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
