--- a/index.html
+++ b/index.html
@@ -363,7 +363,15 @@
 	      			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	      				<p class="tituloDescripcion">Descripción del Proyecto</p>
 	      				<hr>
-	      				<div class="explicacion">Proyecto de creación de una app movil para solicitar taxis, en este trabajo hicimos uso de la librearia de JQuery.</div>
+	      				<div class="explicacion">Trabajo grupal que consistió en realizar un proyecto que tuviera los siguientes requisitos:
+	      				<ul>
+	      				 	<li>El contexto del proyecto deber ser música / video.</li>
+	      				 	<li>Implementar el sharing de redes sociales.</li>
+	      				 	<li>Usar AJAX/Jquery/Librería Externa.</li>
+	      				 	<li>Usar una librería cool.</li>
+	      				 </ul>
+	      				 En este proyecto me encargue de implementar el sharing son las redes socilaes, además de el diseño del logotipo.    				
+	      				</div>
 	      				<p class="tituloDescripcion">Herramientas Utilizadas</p>
 	      				<hr>
 	      				<div class="herramientas">
@@ -372,8 +380,8 @@
 									<i class="iconHerramienta js ion-social-javascript"></i>
 	      				</div>
 	      				<div class="linkProjects">
-	      					<a id="botones" href="https://github.com/efarfan2393/lyft" target="_blank">GitHub</a>
-	      					<a id="botones" href="https://efarfan2393.github.io/lyft/" target="_blank">Ver Página</a>
+	      					<a id="botones" href="https://github.com/efarfan2393/soundrock" target="_blank">GitHub</a>
+	      					<a id="botones" href="https://efarfan2393.github.io/soundrock/" target="_blank">Ver Página</a>
 	      				</div>
 	      			</div>
 	      		</div>
