--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="contTituloColor">
-						<p class="sub text-center">SOBRE MÍ</p>
+						<p class="sub text-center">SOBRE MI</p>
 					</div>
 					<div class="mb10 col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center">
 						<img class="img-responsive center-block" src="img/photo-cv.jpg" alt="photp-perfil">
@@ -74,16 +74,10 @@
 						<p class="quince"> Mi nombre es Evelyn Farfan, soy Front-end Developer Jr, estudiante de Laboratoria, además de Diseñadora Gráfica.
 						<br>
 						<br>
-						Me considero una persona responsable, con ganas de seguir aprendiendo, así como también enriquecer mis conocimientos teóricos y prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional. Si te gustaría trabajar conmigo puedes contactarme mediante mis redes sociales.
-						</p>
+						Me considero una persona con muchas ganas de aprender y enriquecer mis conocimientos teóricos, prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
 						<br>
-						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="../pdf/cv-evelyn-farfan.pdf" download="CV-Evelyn Farfan">
+						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="../pdf/cv-evelyn-farfan.pdf" download="cv-evelyn-farfan">
 						Descarga mi cv</a></button>
-						<div class="row">
-							<div class="col-md-4"></div>
-							<div class="col-md-4"></div>
-							<div class="col-md-4"></div>
-						</div>
 					</div>
 				</div>
 			</div>
