--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<br>
 						Me considero una persona con muchas ganas de aprender y enriquecer mis conocimientos teóricos, prácticos para poder aplicarlos en cualquier área de mi especialidad, además de continuar preparándome para desarrollar y mantener actualizado mi campo profesional.</p>
 						<br>
-						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="../pdf/cv-evelyn-farfan.pdf" download="cv-evelyn-farfan">
+						<button id="botones" type="button" class="btn btn-info"><i class="glyphicon glyphicon-download-alt"></i><a class="enlaceCv" href="pdf/cv-evelyn-farfan.pdf" download="cv-evelyn-farfan">
 						Descarga mi cv</a></button>
 					</div>
 				</div>
