--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 	        <span aria-hidden="true">&times;</span></button>
-	        <p class="tituloProyecto">LYFT</p>
+	        <p class="tituloProyecto">SOUNDROCK</p>
 	      </div>
 	      <div class="modal-body">
 	      	<div id="contProject" class="container">
